name:                poker
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/kpritam/poker#readme
license:             BSD3
license-file:        LICENSE
author:              Pritam Kadam
maintainer:          kpritam@thoughtworks.com
copyright:           2018 Pritam Kadam
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable poker
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
